--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     }
     li a {
     display: inline-block;
-    
+    color:white;
     text-align: center;
     padding: 30px;
     text-decoration: none;
@@ -64,7 +64,7 @@ li a:hover {
     <div class="topnav">
 
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" class="">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
 
             </li>
